--- a/style2.css
+++ b/style2.css
@@ -130,10 +130,11 @@ p {
     padding: 50px 0;
 }
 
-#portfolio .portfolio-header img{
-    margin-top: 50px;
-    margin-bottom: 10px;
-    width: 500px;
+#portfolio .portfolio-header p{
+    font-size: 26px; 
+    margin-bottom: 60px;
+    padding: 30px;
+    text-align: center;
 }
 
 /* Slides - Carrossel */
